# spriteray

./: .gitignore  Cargo.toml
examples/: animation.rs  capsule.rs  cone.rs  cube.rs  cylinder.rs  difference.rs  half_capsule.rs  humanoid.rs  intersection.rs  rounded_quad.rs  skeleton.rs  sphere.rs  torus.rs  truncated_cone.rs  union.rs
examples/common/: save_png.rs
src/: anim_render.rs  capsule.rs  color.rs  cone.rs  difference.rs  half_capsule.rs  humanoid.rs  lib.rs  math.rs  mirror.rs  plane.rs  render.rs  sdf.rs  sdf_result.rs  skeleton.rs  sphere.rs  torus.rs  transform.rs  truncated_cone.rs  union.rs
src/modifiers/: difference.rs  intersection.rs  mod.rs  transform.rs  union.rs
src/primitives/: capsule.rs  cone.rs  cube.rs  cylinder.rs  half_capsule.rs  infinite_cone.rs  infinite_cylinder.rs  mod.rs  plane.rs  rounded_quad.rs  sphere.rs  torus.rs  truncated_cone.rs
