[package]
name = "spriteray"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.21.2"
image = { version = "0.24.2", optional = true }

[[example]]
name = "sphere"
required-features = ["image"]

[[example]]
name = "torus"
required-features = ["image"]

[[example]]
name = "cone"
required-features = ["image"]

[[example]]
name = "union"
required-features = ["image"]

[[example]]
name = "difference"
required-features = ["image"]
