[package]
name = "spriteray"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.21.2"
image = { version = "0.24.2", optional = true }

[[example]]
name = "animation"
required-features = ["image"]

[[example]]
name = "capsule"
required-features = ["image"]

[[example]]
name = "cone"
required-features = ["image"]

[[example]]
name = "cylinder"
required-features = ["image"]

[[example]]
name = "cube"
required-features = ["image"]

[[example]]
name = "half_capsule"
required-features = ["image"]

[[example]]
name = "humanoid"
required-features = ["image"]

[[example]]
name = "intersection"
required-features = ["image"]

[[example]]
name = "truncated_cone"
required-features = ["image"]

[[example]]
name = "union"
required-features = ["image"]

[[example]]
name = "difference"
required-features = ["image"]

[[example]]
name = "rounded_quad"
required-features = ["image"]

[[example]]
name = "skeleton"
required-features = ["image"]

[[example]]
name = "sphere"
required-features = ["image"]

[[example]]
name = "torus"
required-features = ["image"]
